@@ -25,6 +25,7 @@
 #include <boost/enable_shared_from_this.hpp>
 #include "ffmpeg_content.h"
 #include "audio_mapping.h"
+#include "frame_rate_change.h"
 
 class Content;
 class FFmpegContent;
@@ -74,6 +75,7 @@ public:
 	
 	int best_dcp_frame_rate () const;
 	Time video_end () const;
+	FrameRateChange active_frame_rate_change (Time, int dcp_frame_rate) const;
 
 	void set_sequence_video (bool);
 	void maybe_sequence_video ();
