@@ -465,33 +465,6 @@ md5_digest (vector<boost::filesystem::path> files, shared_ptr<Job> job)
 	return digester.get ();
 }
 
-static bool
-about_equal (float a, float b)
-{
-	/* A film of F seconds at f FPS will be Ff frames;
-	   Consider some delta FPS d, so if we run the same
-	   film at (f + d) FPS it will last F(f + d) seconds.
-
-	   Hence the difference in length over the length of the film will
-	   be F(f + d) - Ff frames
-	    = Ff + Fd - Ff frames
-	    = Fd frames
-	    = Fd/f seconds
- 
-	   So if we accept a difference of 1 frame, ie 1/f seconds, we can
-	   say that
-
-	   1/f = Fd/f
-	ie 1 = Fd
-	ie d = 1/F
- 
-	   So for a 3hr film, ie F = 3 * 60 * 60 = 10800, the acceptable
-	   FPS error is 1/F ~= 0.0001 ~= 10-e4
-	*/
-
-	return (fabs (a - b) < 1e-4);
-}
-
 /** @param An arbitrary audio frame rate.
  *  @return The appropriate DCP-approved frame rate (48kHz or 96kHz).
  */
