@@ -20,7 +20,6 @@ def build(bld):
                  audio_delay_test.cc
                  audio_mapping_test.cc
                  audio_merger_test.cc
-                 audio_with_specified_video_frame_rate_test.cc
                  black_fill_test.cc
                  client_server_test.cc
                  colour_conversion_test.cc
