@@ -1,3 +1,9 @@
+2014-06-05  Carl Hetherington  <cth@carlh.net>
+
+	* Back-port changes from v2 which work out how separate
+	audio files should be resampled by looking at the video
+	files which are present at the same time.
+
 2014-06-03  Carl Hetherington  <cth@carlh.net>
 
 	* Version 1.69.21 released.
